--- a/index.html
+++ b/index.html
@@ -29,15 +29,21 @@
       border: 1px solid #dee2e6;
     }
     .saturday {
-      background-color: #8B0000 !important; /* Dark red */
-      color: white !important;
+      background-color: #f8d7da !important;
+      color: #721c24 !important;
     }
     .nepali-title {
       font-weight: bold;
       font-size: 1.5rem;
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
       color: #343a40;
+    }
+    .calendar-header-title {
+      font-size: 2rem;
+      font-weight: bold;
+      text-align: center;
+      margin-bottom: 10px;
     }
   </style>
 </head>
@@ -50,6 +56,7 @@
   </nav>
 
   <div class="container mt-4">
+    <div class="calendar-header-title">नेपाली पात्रो 2082</div>
     <div class="d-flex justify-content-between mb-3">
       <button id="prevBtn" class="btn btn-outline-primary">अघिल्लो महिना</button>
       <h3 id="monthTitle" class="text-center flex-grow-1">महिना</h3>
@@ -78,6 +85,14 @@
       { name: "फागुन", days: 30, startDay: 5 },
       { name: "चैत्र", days: 30, startDay: 0 }
     ];
+
+    const festivals = {
+      "बैशाख": [1, 15],
+      "साउन": [15],
+      "भदौ": [5],
+      "माघ": [1],
+      "चैत्र": [30]
+    };
 
     let currentMonthIndex = 0;
     const calendarDiv = document.getElementById("calendar");
@@ -109,8 +124,9 @@
           if (i === 0 && j < month.startDay) {
             html += "<td></td>";
           } else if (day <= month.days) {
-            let cellClass = j === 6 ? "saturday" : "";
-            html += `<td class="${cellClass}">${day}</td>`;
+            let cellClass = "";
+            if (j === 6) cellClass += " saturday";
+            html += `<td class="${cellClass.trim()}">${day}</td>`;
             day++;
           } else {
             html += "<td></td>";
